edited RSVP form

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <li><a href="#ourstory">Our Story</a></li>
                                 <li><a href="#faq">FAQ</a></li>
                                 <li><a href="#gifts">Gifts</a></li> 
-                                <li><a target="_blank" href="https://docs.google.com/forms/d/1FJz4UUJx9gTu9wFpo9HM7oQZSu11rrOXCklldZN4Kys/viewform">RSVP</a> </li>
+                                <li><a target="_blank" href="http://goo.gl/forms/6vCo8rqxPP">RSVP</a> </li>
                             </ul>
                         </nav>
                     </div>
@@ -59,7 +59,7 @@
                     <div class="hero-content text-center">
                         <h1 style="margin-top: 100px;">Nils + Yvonne</h1>
                         <p class="intro">TYING THE KNOT <br /> November 26, 2016 <br /><br />
-                         <a target="_blank" href="https://docs.google.com/forms/d/1FJz4UUJx9gTu9wFpo9HM7oQZSu11rrOXCklldZN4Kys/viewform" class="btn btn-fill btn-large btn-margin-right">RSVP NOW</a> <br /></p>
+                         <a target="_blank" href="http://goo.gl/forms/6vCo8rqxPP" class="btn btn-fill btn-large btn-margin-right">RSVP NOW</a> <br /></p>
                     </div>
                 </div>
             </div>
@@ -381,7 +381,7 @@ So I said yes when he gave me a shiny ring to wear </p>
                             <li>
                                 <!-- <div class="avatar"> <i style="color: #D3B983; font-size: 60px;" class="fa fa-gift"></i> </div> -->
                                 <h2>"Can I bring my kids?"</h2>
-                                <p class="author">Some of you may feel hesitant to bring your kids. Children are welcome! You know your kids best, what their needs are, and how they will behave at such a function. Whatever you decide, we support you. We just ask that you let us know far in advance so we can estimate guest count (and high chairs, if needed). </p>
+                                <p class="author">Yes! Children are welcome. Some of you mentioned hesitation around bringing your kids. Our answer is, you know your kids best, what their needs are, and how they will behave at such a function. Whatever you decide, we support you. We just ask that you let us know far in advance so we can estimate guest count (and high chairs, if needed). </p>
 
                             </li>
                         </ul>
@@ -407,7 +407,7 @@ So I said yes when he gave me a shiny ring to wear </p>
                         </div>
                         <button type="submit" class="btn-fill sign-up-btn">Please remember to RSVP!</button>
                     </form> --> 
-                    <p><a target="_blank" href="https://docs.google.com/forms/d/1FJz4UUJx9gTu9wFpo9HM7oQZSu11rrOXCklldZN4Kys/viewform" class="btn btn-ghost btn-accent btn-small">Please remember to RSVP!</a></p>
+                    <p><a target="_blank" href="http://goo.gl/forms/6vCo8rqxPP" class="btn btn-ghost btn-accent btn-small">Please remember to RSVP!</a></p>
                 </div>
             </div>
         </div>
