--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Yvonne is the quite literally the polar opposite of Nils. She’s still stumped 
                 
         <div class="container">
             <div class="row"> 
-                <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
+                <div class="col-md-6 col-sm-12 col-xs-12 leftcol" style="padding-bottom: 60px;">
                     <img style="width: 100%; border: 3px solid #fff;" src="img/boundaryoak.png" alt="Boundary Oak Golf Course" /><br /><br />
                     <p>Boundary Oak is a large golf course that overlooks east bay hills with stunning views of San Ramon Valley and Mount Diablo. <br /></p>
                 </div>
@@ -141,24 +141,24 @@ Walnut Creek, CA 94598 <br /><br />
 
 The ceremony will be on the golf course, cocktail hour and reception will be indoors in the clubhouse.<br /><br /> 
 
-<a target="_blank" href="https://www.google.com/maps/dir//The+Clubhouse+at+Boundary+Oak,+3800+Valley+Vista+Rd,+Walnut+Creek,+CA+94598,+United+States/@37.9240079,-121.9969479,15z/data=!4m12!1m3!3m2!1s0x0:0x88253a1a406c051c!2sThe+Clubhouse+at+Boundary+Oak!4m7!1m0!1m5!1m1!1s0x8085607395ef5653:0x88253a1a406c051c!2m2!1d-121.9969479!2d37.9240079" class="btn btn-ghost btn-accent btn-large">Get Directions</a> <br /><br /></p> 
+<a target="_blank" href="https://www.google.com/maps/dir//The+Clubhouse+at+Boundary+Oak,+3800+Valley+Vista+Rd,+Walnut+Creek,+CA+94598,+United+States/@37.9240079,-121.9969479,15z/data=!4m12!1m3!3m2!1s0x0:0x88253a1a406c051c!2sThe+Clubhouse+at+Boundary+Oak!4m7!1m0!1m5!1m1!1s0x8085607395ef5653:0x88253a1a406c051c!2m2!1d-121.9969479!2d37.9240079" class="btn btn-ghost btn-accent btn-large">Get Directions</a> <br /><br /><br /></p> 
                </div>
             </div> <br /><br /> 
-            <div class="row" style="text-align: center;">
-                <div class="col-md-4">
+            <div class="row" style="text-align: center; padding-top: 10px; padding-bottom: 20px;">
+                <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The Day Before </h3>
                 <p>Fri, Nov 25, 2016 </p>
-                <p>TBD, Family Only </p>
+                <p>TBD, Family Only <br /></p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The After Party</h3>
                 <p>Sat, Nov 26, 2016 </p>
-                <p>TBD, Anyone that wants to join! </p>
+                <p>TBD, Anyone that wants to join! <br /></p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The Morning After</h3>
                 <p>Sun, Nov 27, 2016 </p>
-                <p>TBD, Anyone that wants to join! We're thinking about possibly doing a short hike to burn off some calories so bring comfortable shoes!</p>
+                <p>TBD, Anyone that wants to join! We're thinking about possibly doing a short hike to burn off some calories so bring comfortable shoes! <br /></p>
                 </div>
             </div>           
         </div> 
@@ -261,7 +261,9 @@ So I said yes when he gave me a shiny ring to wear </p>
                 <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                     <h5>HIS VERSION </h5>
                     <p>I met Yvonne through mutual friends at the local gym. Yvonne initially thought I was obnoxious and did not think much of me until my birthday party where she learned that I loved snowboarding. <br /> <br /> 
-                    After meeting over bubble tea, she still thought I was obnoxious, and I thought she was extremely negative. Luckily, these short sighted problems went away and we would later go out on many “events” because she did not want to think we were going on actual dates! Fast forward 6 months later, Yvonne finally agreed to be "really dating" and I got upgraded to boyfriend. </p>
+                    After meeting over bubble tea, she still thought I was obnoxious, and I thought she was extremely negative. Luckily, these short sighted problems went away and we would later go out on many “events” because she did not want to think we were going on actual dates! Fast forward 6 months later, Yvonne finally agreed to be "really dating" and I got upgraded to boyfriend. <br /><br />
+                    On Black Friday, I suggested we go hang out in SF and walk up the hills to burn off some of the turkey we ate. Yvonne pretty much likes anything that requires physical activity so she just thought we were going on a hike. We walked to the Ferry Building, then up to the top of the Coit Tower, where I then got down on one knee to propose to Yvonne while she was taking pictures with her phone. Yvonne was completely shocked and said “yes!” <br />
+</p>
                 </div>
             </div>
         </div>
