Added text edits

--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
             <div class="row">
             <div class="col-md-12">
                     <h3>Accommodations</h3>
-                    <p>We have room blocks at the following hotel discounted at $129 + tax per night, $15 valet parking, full access to their 85,000 sq. ft. fitness facility, free wifi, and an 8 min walk to BART station (Pleasant Hill/Contra Consta Centre BART station). Please use the <strong>designated link below</strong> to book online. Please mention the <strong>So-Schimmelmann Wedding</strong> if booking by phone. Ignore the $25 valet parking fee in the description, it is confirmed to be $15. <br /></p>
+                    <p>We have room blocks at the following hotel discounted at $129 + tax per night, $15 valet parking, full access to their 85,000 sq. ft. fitness facility, free wifi, and an 8 min walk to BART station (Pleasant Hill/Contra Consta Centre BART station). Please use the <strong>designated link below</strong> to book online. Please mention the <strong>So-Schimmelmann Wedding</strong> if booking by phone. Ignore the $25 valet parking fee in the description, it is confirmed to be $15. The cutoff date for the blocks is October 24. <br /></p>
                     <p style="text-align: center; font-size: 20px;"><a target="_blank" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=So%20and%20Schimmelmann%20Wedding%20Block%5Eoakbr%60sowsowa%60129.00%60USD%60false%604%6011/24/16%6011/27/16%6010/26/16&app=resvlink&stop_mobi=yes">Renaissance Clubsport Walnut Creek Hotel</a><br />
                     2805 Jones Road <br />
                     Walnut Creek, CA 94597 <br /> 
                     +1-925-938-8700 <br /></p>
                      
-                    <p>If that's too pricey we recommend looking into accommodations in neighboring areas of Walnut Creek such as Concord, Benicia, Danville, and San Ramon. Try looking at hotel booking websites first (i.e. Priceline, Hotwire, Kayak, Expedia, Orbitz, etc.). We also recommend looking into <a target="_blank" href="https://www.airbnb.com/s/Walnut-Creek--CA?zoom=13&search_by_map=true&sw_lat=37.92227351697675&sw_lng=-122.0766452437959&ne_lat=37.999582569515226&ne_lng=-121.98686634364941&ss_id=3jpen7ml&s_tag=iJUeV6qE">Airbnb</a> and <a target="_blank" href="https://www.vrbo.com/vacation-rentals/usa/california/san-francisco-bay-ar/walnut-creek">VRBO</a>. Also, if you're willing to share a hotel room, <a target="_blank" href="mailto:nilsandyvonne@gmail.com">email us</a> and we can try to match you up with someone! <br /></p> 
+                    <p>If you prefer other options, we recommend looking into accommodations in neighboring areas of Walnut Creek such as Concord, Pleasant Hill, Benicia, Danville, and San Ramon. Try looking at hotel booking websites first (i.e. Priceline, Hotwire, Kayak, Expedia, Orbitz, etc.). We also recommend looking into <a target="_blank" href="https://www.airbnb.com/s/Walnut-Creek--CA?zoom=13&search_by_map=true&sw_lat=37.92227351697675&sw_lng=-122.0766452437959&ne_lat=37.999582569515226&ne_lng=-121.98686634364941&ss_id=3jpen7ml&s_tag=iJUeV6qE">Airbnb</a> and <a target="_blank" href="https://www.vrbo.com/vacation-rentals/usa/california/san-francisco-bay-ar/walnut-creek">VRBO</a>. Also, if you're willing to share a hotel room, <a target="_blank" href="mailto:nilsandyvonne@gmail.com">email us</a> and we can try to match you up with someone! <br /></p> 
                     
                     <h3>Transportation</h3>
                     <p>We are currently looking into shuttling guests if enough of you are staying in the same location. <a target="_blank" href="https://www.uber.com/">Uber</a> and <a target="_blank" href="https://www.lyft.com/
@@ -241,12 +241,12 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
                     <p>Met Nils through some friends at the gym <br />
 Didn’t think I’d ever go on a date with him <br />
 He was really obnoxious and loud in a crowd <br />
-He said he wasn’t going to stop chasing me, this he vowed <br /><br />
+He wasn’t going to stop chasing me, this he vowed <br /><br />
 
 I finally gave in to a coffee date as he lured me with snow <br />
 It’s a mutual interest, I couldn’t say no <br />
 After a couple of dates that went real well <br />
-He asked me to be his girlfriend and I thought, ‘oh fine, what the hell’ <br /><br />
+He became the new boyfriend as you can tell <br /><br />
 
 We went on adventures and traveled the world <br />
 Ran across landscapes and delightfully twirled <br />
@@ -385,7 +385,7 @@ So I said yes when he gave me a shiny ring to wear </p>
                             <li>
                                 <!-- <div class="avatar"> <i style="color: #D3B983; font-size: 60px;" class="fa fa-gift"></i> </div> -->
                                 <h2>"Can I bring my kids?"</h2>
-                                <p class="author">Yes! Children are welcome. Some of you mentioned hesitation around bringing your kids. Our answer is, you know your kids best, what their needs are, and how they will behave at such a function. Whatever you decide, we support you. We just ask that you let us know far in advance so we can estimate guest count (and high chairs, if needed). </p>
+                                <p class="author">Yes. Some of you mentioned hesitation around bringing your kids. Our answer is, you know your kids best, what their needs are, and how they will behave at such a function. Whatever you decide, we support you. We just ask that you let us know far in advance so we can estimate guest count (and high chairs, if needed). </p>
 
                             </li>
                         </ul>
