--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
             <div class="col-md-12">
                     <h3>Accommodations</h3>
                     <p>We have room blocks at the following hotel discounted at $129 + tax per night, $15 valet parking, full access to their 85,000 sq. ft. fitness facility, free wifi, and an 8 min walk to BART station (Pleasant Hill/Contra Consta Centre BART station). Please use the <strong>designated link below</strong> to book online. Please mention the <strong>So-Schimmelmann Wedding</strong> if booking by phone. Ignore the $25 valet parking fee in the description, it is confirmed to be $15. The cutoff date for the blocks is October 26. <br /></p>
-                    <p style="text-align: center; font-size: 20px;"><a target="_blank" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=So%20and%20Schimmelmann%20Wedding%20Block%5Eoakbr%60sowsowa%60129.00%60USD%60false%604%6011/24/16%6011/27/16%6010/26/16&app=resvlink&stop_mobi=yes">Renaissance Clubsport Walnut Creek Hotel</a><br />
+                    <p style="text-align: center; font-size: 20px;"><a target="_blank" href="https://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=So%20and%20Schimmelmann%20Wedding%20Block^oakbr`sowsowa`129.00`USD`false`4`11/24/16`11/28/16`10/26/16">Renaissance Clubsport Walnut Creek Hotel</a><br />
                     2805 Jones Road <br />
                     Walnut Creek, CA 94597 <br /> 
                     +1-925-938-8700 <br /></p>
