added in Lyft code

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
                     
                     <h3>Transportation</h3>
                     <p>We are currently looking into shuttling guests if enough of you are staying in the same location. <a target="_blank" href="https://www.uber.com/">Uber</a> and <a target="_blank" href="https://www.lyft.com/
-">Lyft</a> are also the most popular options (often with discounts on your first ride) for getting around if you will not have a car. If you do choose to use Uber, you can use the code "<strong>SNAPFREERIDE</strong>" to get $30 off your first ride. <br /></p> 
+">Lyft</a> are also the most popular options (often with discounts on your first ride) for getting around if you will not have a car. If you do choose to use Uber, you can use the code "<strong>SNAPFREERIDE</strong>" to get $30 off your first ride. If you choose to use Lyft, you can use the code "<strong>YVONNE376</strong>" for $20 ride credit. These codes are for new users only. There's <a target="_blank" href="http://rideshare.services/lyft-promo-code-free-ride-credit-coupon-guide/">plenty more promo codes</a> for ride credits on the Internet that you can try as well. <br /></p> 
 
             <p>If you absolutely prefer to stay in San Francisco, the <a target="_blank" href="https://www.bart.gov/stations/powl/directions?tofrom=to&address=walnut%20creek&station=POWL&mode=TRANSIT">BART ride</a> (public transit train) to Walnut Creek is about 35-45 min from downtown SF, but no guarantees on Thanksgiving weekend... <br /></p> 
             
