added in Lyft codes

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
                 <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The Day Before </h3>
                 <p>Fri, Nov 25, 2016 </p>
-                <p>TBD, Family Only <br /></p>
+                <p>TBD, Family and Out of Town Guests <br /></p>
                 </div>
                 <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The After Party</h3>
@@ -158,7 +158,7 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
                 <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The Morning After</h3>
                 <p>Sun, Nov 27, 2016 </p>
-                <p>TBD, Anyone that wants to join! We're thinking about possibly doing a short hike to burn off some calories so bring comfortable shoes! <br /></p>
+                <p>TBD, Anyone that wants to join! We're thinking about possibly doing a short hike to burn off some calories so bring comfortable shoes. <br /></p>
                 </div>
             </div>           
         </div> 
