--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ So I said yes when he gave me a shiny ring to wear </p>
                 </div>
 
 
-                <a target="_blank" href="http://blog.nilsandyvonne.com/" class="btn btn-ghost btn-accent btn-small">More on the Tumblr </a>
+                <a target="_blank" href="http://blog.nilsandyvonne.com/" class="btn btn-ghost btn-accent btn-small">More on our Tumblr </a>
             </div>
         </div>
     </section>
@@ -385,7 +385,7 @@ So I said yes when he gave me a shiny ring to wear </p>
                             <li>
                                 <!-- <div class="avatar"> <i style="color: #D3B983; font-size: 60px;" class="fa fa-gift"></i> </div> -->
                                 <h2>"Can I bring my kids?"</h2>
-                                <p class="author">Yes. Some of you mentioned hesitation around bringing your kids. Our answer is, you know your kids best, what their needs are, and how they will behave at such a function. Whatever you decide, we support you. We just ask that you let us know far in advance so we can estimate guest count (and high chairs, if needed). </p>
+                                <p class="author">Quite a few of our friends and family are proud new parents! Some of you mentioned hesitation around bringing your kids. Our answer is, you know your kids best, what their needs are, and how they will behave at such a function. Whatever you decide, we support you! We just ask that you let us know far in advance so we can estimate guest count (and high chairs, if needed). </p>
 
                             </li>
                         </ul>
@@ -400,7 +400,7 @@ So I said yes when he gave me a shiny ring to wear </p>
                 <div class="col-md-12">
                     <i style="font-size: 60px;" class="icon-gift"></i>
                     <h3>Gifts</h3>
-                    <p>We do not have a lot of storage space so we decided to forego the registry tradition. Instead, we suggest gifts in the form of <a target="_blank" href="https://en.wikipedia.org/wiki/Red_envelope">Red Envelopes</a>, a traditional Chinese gift given at weddings to wish the couple well as they embark on their new life together. Actual red envelopes are optional as greeting cards or other envelopes work wonderfully as well. We would also be more than happy to donate to your favorite charity in our name! All that said, the best gift we could ever receive is your presence at our wedding!<br /></p> 
+                    <p>We do not have a lot of storage space so we decided to forego the registry tradition. Instead, we suggest gifts in the form of <a target="_blank" href="https://en.wikipedia.org/wiki/Red_envelope">Red Envelopes</a>, a traditional Chinese gift given at weddings to wish the couple well as they embark on their new life together. Actual red envelopes are optional as greeting cards or other envelopes work wonderfully as well. We would also be more than happy to donate to your favorite charity in our name. All that said, the best gift we could ever receive is your presence at our wedding!<br /></p> 
                     
                   <!-- <form class="signup-form" action="#" method="POST" role="form">
                         <div class="form-input-group">
