edited yvonne bio

--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
                     <h3>The Bride</h3>
                     <p><img class="thumb" src="img/yvonneThumb.jpg" alt="Yvonne" />  Yvonne is the older So Sistah, and was born and raised in Houston, TX by the most (for)giving parents ever. Growing up, Yvonne had a gazillion hobbies including piano, violin, tennis, dance, Chinese school, math classes, etc. and she wants her parents to know the eternal appreciation she feels for letting their children rob them of their youth. <br /><br />
 
-In between orchestra practice and dance lessons, Yvonne has always been infinitely curious, constantly asking why, seeking answers to tough questions, fighting for what's right. Her stubbornness and passion for solving problems, often in creative or unconventional ways, eventually led her into the world of user experience design. After living in New York to work in advertising and consulting, she now works as a designer at a software company in the SF bay area. <br /><br />
-
-These days you'll find her enjoying California through hiking, snowboarding, climbing, biking, and occasionally flying kites. <br />
+In between orchestra practice and dance lessons, Yvonne has always been infinitely curious, constantly asking why, seeking answers to tough questions, fighting for what's right. Her stubbornness and passion for solving problems, often in creative or unconventional ways, eventually led her into the world of user experience design. After living in New York to work in advertising and consulting, she now works as a designer at a software company in the SF bay area. These days you'll find her enjoying California through hiking, snowboarding, climbing, biking, and occasionally flying kites. <br />
 </p>
                 </div>
                 <div class="col-md-6 col-sm-12 col-xs-12 rightcol"> 
