added in some more text

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
             <div class="row">
             <div class="col-md-12">
                     <h3>Accommodations</h3>
-                    <p>We have room blocks at the following hotel discounted at $129 + tax per night, $15 valet parking, full access to their 85,000 sq. ft. fitness facility, free wifi, and an 8 min walk to BART station (Pleasant Hill/Contra Consta Centre BART station). Please use the <strong>designated link below</strong> to book online. Please mention the <strong>So-Schimmelmann Wedding</strong> if booking by phone. Ignore the $25 valet parking fee in the description, it is confirmed to be $15. The cutoff date for the blocks is October 26. <br /></p>
+                    <p>We have room blocks at the following hotel discounted at $129 + tax per night, $15 valet parking, full access to their 85,000 sq. ft. fitness facility, free wifi, and an 8 min walk to BART station (Pleasant Hill/Contra Consta Centre BART station). Please use <a target="_blank" href="https://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=So%20and%20Schimmelmann%20Wedding%20Block^oakbr`sowsowa`129.00`USD`false`4`11/24/16`11/28/16`10/26/16"><strong>this designated link</strong></a> to book online. Please mention the <strong>So-Schimmelmann Wedding</strong> if booking by phone. Ignore the $25 valet parking fee in the description, it is confirmed to be $15. The cutoff date for the blocks is October 26. <br /></p>
                     <p style="text-align: center; font-size: 20px;"><a target="_blank" href="https://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=So%20and%20Schimmelmann%20Wedding%20Block^oakbr`sowsowa`129.00`USD`false`4`11/24/16`11/28/16`10/26/16">Renaissance Clubsport Walnut Creek Hotel</a><br />
                     2805 Jones Road <br />
                     Walnut Creek, CA 94597 <br /> 
@@ -181,7 +181,7 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
                     
                     <h3>Travel and Transportation</h3>
                     <p>We recommend flying into <a target="_blank" href="http://www.flysfo.com/to-from/public-transit">SFO</a> or <a target="_blank" href="http://www.oaklandairport.com/bart_oak.shtml">OAK</a> airports. From either airport, you can hop on the BART (public transit train; plenty of kiosks available, should cost no more than $10) to get to Pleasant Hill/ Contra Consta Centre BART station, then it's an 8 min walk to the Renaissance Clubsport Hotel. <br /><br /> We are currently looking into shuttling guests if enough of you are staying in the same location. <a target="_blank" href="https://www.uber.com/">Uber</a> and <a target="_blank" href="https://www.lyft.com/
-">Lyft</a> are also the most popular options (often with discounts on your first ride) for getting around if you will not have a car. If you do choose to use Uber, you can use the code "<strong>SNAPFREERIDE</strong>" to get $30 off your first ride. If you choose to use Lyft, you can use the code "<strong>YVONNE376</strong>" for $20 ride credit. These codes are for new users only. There's <a target="_blank" href="http://rideshare.services/lyft-promo-code-free-ride-credit-coupon-guide/">plenty more promo codes</a> for ride credits on the Internet that you can try as well. <br /></p> 
+">Lyft</a> are also the most popular options (often with discounts on your first ride) for getting around if you will not have a car. If you do choose to use Uber, you can use the code "<strong>SNAPFREERIDE</strong>" or "<strong>yvonnes840ue</strong>" to get up to $30 off your first ride. If you choose to use Lyft, you can use the code "<strong>YVONNE376</strong>" for up to $50 ride credit. These codes are for new users only. There's <a target="_blank" href="http://rideshare.services/lyft-promo-code-free-ride-credit-coupon-guide/">plenty more promo codes</a> for ride credits on the Internet that you can try as well. <br /></p> 
 
             <p>If you absolutely prefer to stay in San Francisco, the <a target="_blank" href="https://www.bart.gov/stations/powl/directions?tofrom=to&address=walnut%20creek&station=POWL&mode=TRANSIT">BART ride</a> to Walnut Creek is about 35-45 min from downtown SF, but no guarantees on Thanksgiving weekend... <br /></p> 
             
@@ -383,7 +383,7 @@ So I said yes when he gave me a shiny ring to wear </p>
                             <li>
                                 <!-- <div class="avatar"> <i style="color: #D3B983; font-size: 60px;" class="fa fa-gift"></i> </div> -->
                                 <h2>"Can I bring my kids?"</h2>
-                                <p class="author">Quite a few of our friends and family are proud new parents! Some of you mentioned hesitation around bringing your kids. Our answer is, you know your kids best, what their needs are, and how they will behave at such a function. Whatever you decide, we support you! We just ask that you let us know far in advance so we can estimate guest count. </p>
+                                <p class="author">Quite a few of our friends and family are proud new parents! Some of you mentioned hesitation around bringing your kids. Our answer is, you know your kids best, what their needs are, and how they will behave at such a function. Whatever you decide, we support you. We just ask that you let us know far in advance so we can estimate guest count, and to please be respectful during the ceremony. </p>
 
                             </li>
                         </ul>
@@ -409,7 +409,7 @@ So I said yes when he gave me a shiny ring to wear </p>
                         </div>
                         <button type="submit" class="btn-fill sign-up-btn">Please remember to RSVP!</button>
                     </form> --> 
-                    <p><a target="_blank" href="http://goo.gl/forms/6vCo8rqxPP" class="btn btn-ghost btn-accent btn-small">Please remember to RSVP!</a></p>
+                    <p><a target="_blank" href="http://goo.gl/forms/6vCo8rqxPP" class="btn btn-ghost btn-accent btn-small">Please remember to RSVP by Sep 26!</a></p>
                 </div>
             </div>
         </div>
