--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
                     Walnut Creek, CA 94597 <br /> 
                     +1-925-938-8700 <br /></p>
                      
-                    <p>If the room blocks are full, please call and ask for/  <a target="_blank" href="mailto:matt.oneil@clubsports.com">email our hotel contact Matt O'Neil</a> and he will open up more rooms. </p>
+                    <p>If the room blocks are full, please call and ask for or <a target="_blank" href="mailto:matt.oneil@clubsports.com">email our hotel contact Matt O'Neil</a> and he will open up more rooms. </p>
                     <p>There are many other accommodation options in the area. We also recommend looking into accommodations in neighboring areas of Walnut Creek such as Concord, Pleasant Hill, Benicia, Danville, and San Ramon. Try looking at hotel booking websites first (i.e. Priceline, Hotwire, Kayak, Expedia, Orbitz, etc.). You can also try looking into <a target="_blank" href="https://www.airbnb.com/s/Walnut-Creek--CA?zoom=13&search_by_map=true&sw_lat=37.92227351697675&sw_lng=-122.0766452437959&ne_lat=37.999582569515226&ne_lng=-121.98686634364941&ss_id=3jpen7ml&s_tag=iJUeV6qE">Airbnb</a> and <a target="_blank" href="https://www.vrbo.com/vacation-rentals/usa/california/san-francisco-bay-ar/walnut-creek">VRBO</a>. Also, if you're willing to share a hotel room, <a target="_blank" href="mailto:nilsandyvonne@gmail.com">email us</a> and we can try to match you up with someone! <br /> </p> 
                     
                     <h3>Travel and Transportation</h3>
