--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
                 <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The Day Before </h3>
                 <p>Fri, Nov 25, 2016 </p>
-                <p>TBD, Family and Out of Town Guests <br /></p>
+                <p>Rehearsal: Wedding Party <br /> 
+                Rehearsal Dinner: Family <br />
+                Details TBD <br /></p>
                 </div>
                 <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The After Party</h3> 
