wedding plans update

--- a/index.html
+++ b/index.html
@@ -112,19 +112,20 @@ The ceremony will be on the golf course, cocktail hour and reception will be ind
                 <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The Day Before </h3>
                 <p>Fri, Nov 25, 2016 </p>
-                <p>Rehearsal: Wedding Party <br /> 
-                Rehearsal Dinner: Family <br />
-                Details TBD <br /></p>
+                <p>Rehearsal: 10AM at Boundary Oak (Wedding Party) <br /> 
+                Rehearsal Lunch: 12PM at TBD (Wedding Party) <br />
+                <br /></p>
                 </div>
                 <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The After Party</h3> 
                 <p>Sat, Nov 26, 2016 </p>
-                <p>TBD, Anyone that wants to join! <br /></p>
+                <p>TBD, Anyone that wants to join! We're currently thinking meeting back up at the hotel bar. <br />
+                <br /></p>
                 </div>
                 <div class="col-md-4" style="padding-bottom: 60px;">
                 <h3>The Morning After</h3>
                 <p>Sun, Nov 27, 2016 </p>
-                <p>TBD, Anyone that wants to join! We're thinking about possibly doing a short hike to burn off some calories so bring comfortable shoes. <br /></p>
+                <p>TBD, Anyone that wants to join! We're thinking about possibly doing a short hike at <a target="_blank" href="https://www.yelp.com/biz/shell-ridge-open-space-walnut-creek">Shell Ridge Open Space</a> to burn off some calories so bring comfortable shoes. <br /></p>
                 </div>
             </div>           
         </div> 
